refactor: 커스텀 예외처리 리팩토링