@@ -99,7 +99,7 @@ public enum StudylogAcceptanceFixture {
         "진짜 어려움",
         1L,
         1L,
-        Arrays.asList(4L)
+        List.of(4L)
     );
 
     private final StudylogRequest studylogRequest;
@@ -116,7 +116,8 @@ public enum StudylogAcceptanceFixture {
         List<TagRequest> tagRequests = Arrays.stream(tags)
             .map(TagAcceptanceFixture::getTagRequest)
             .collect(toList());
-        this.studylogRequest = new StudylogRequest(title, content, sessionId, missionId, tagRequests);
+        this.studylogRequest = new StudylogRequest(title, content, sessionId, missionId,
+            tagRequests);
     }
 
     public static List<StudylogRequest> findByMissionNumber(Long missionId) {
